[Feat] Update newsletter and subscriptions

--- a/lang/de.json
+++ b/lang/de.json
@@ -26,6 +26,7 @@
     "Clean code, testing strategies, and development workflows": "Sauberer Code, Teststrategien und Entwicklungsabläufe",
     "Comment text": "Kommentartext",
     "Comments": "Kommentare",
+    "Confirm subscription": "Abonnement bestätigen",
     "Contact Me": "Kontaktieren Sie mich",
     "Content": "Inhalt",
     "Continuous Integration & Deployment": "",
@@ -49,6 +50,8 @@
     "I respect your privacy. Unsubscribe at any time": "Ich respektiere Ihre Privatsphäre. Sie können sich jederzeit abmelden",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "Ich bin ein begeisterter PHP-Entwickler mit 3 Jahren Berufserfahrung in Laravel und Symfony-Frameworks. Ich spezialisiere mich auf das Entwickeln robuster Webanwendungen und die Umsetzung von DevOps-Praktiken. Ich habe außerdem umfassende Erfahrung in moderner JavaScript-Entwicklung mit React und Vue.js, um responsive und interaktive Benutzeroberflächen zu erstellen.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "If you did not subscribe, you can ignore this email.": "Wenn Sie sich nicht angemeldet haben, können Sie diese E-Mail ignorieren.",
+    "If you want to unsubscribe, you can do so by clicking the link below:": "Wenn Sie sich abmelden möchten, klicken Sie auf den folgenden Link:",
     "Javascript (React, Vue)": "",
     "Language": "Sprache",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony Tipps, Muster und architektonische Einblicke",
@@ -88,7 +91,7 @@
     "Read more about": "Mehr über",
     "Read the Blog": "Blog lesen",
     "Redis": "Redis",
-    "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Verantwortlich für die Entwicklung und Wartung von Webanwendungen mit Laravel und React. Implementierung von DevOps-Praktiken einschließlich Docker-Containerisierung, CI/CD-Pipelines und automatisierter Tests. Leitung technischer Entscheidungen und Mentoring von Junior-Entwicklern. Optimierung der Anwendungsleistung und Sicherstellung der Codequalität durch Code-Reviews und Best Practices.",
+    "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Verantwortlich für die Entwicklung und Wartung von Webanwendungen mit Laravel und React. Implementierung von DevOps-Praktiken einschließlich Docker-Containerisierung, CI\/CD-Pipelines und automatisierter Tests. Leitung technischer Entscheidungen und Mentoring von Junior-Entwicklern. Optimierung der Anwendungsleistung und Sicherstellung der Codequalität durch Code-Reviews und Best Practices.",
     "Save Category": "Kategorie speichern",
     "Save Post": "Beitrag speichern",
     "Save Tag": "Tag speichern",
@@ -108,6 +111,10 @@
     "Technical Skills": "Technische Fähigkeiten",
     "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Technische Einblicke, Best Practices und tiefgehende Analysen zu Laravel, Symfony und modernen DevOps-Lösungen",
     "Testing (PHPUnit, Pest)": "Testen (PHPUnit, Pest)",
+    "Thank you for subscribing to the newsletter!": "Vielen Dank für Ihr Abonnement des Newsletters!",
+    "The email field is required": "Das E-Mail-Feld ist erforderlich",
+    "The email is already subscribed": "Diese E-Mail ist bereits abonniert",
+    "The email must be a valid email address": "Die E-Mail muss eine gültige E-Mail-Adresse sein",
     "This action cannot be undone. This will permanently delete this category.": "Diese Aktion kann nicht rückgängig gemacht werden. Diese Kategorie wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this post.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieser Beitrag wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this tag.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieses Tag wird dauerhaft gelöscht.",
@@ -115,15 +122,27 @@
     "Title": "Titel",
     "Title A-Z": "Titel A-Z",
     "Title Z-A": "Titel Z-A",
+    "To confirm your subscription, click the link below:": "Um Ihr Abonnement zu bestätigen, klicken Sie auf den folgenden Link:",
     "Translation Key": "Übersetzungsschlüssel",
+    "Unsubscribe": "Abmelden",
     "View all": "Alle anzeigen",
     "Write your comment here...": "Schreiben Sie Ihren Kommentar hier...",
     "You have not created any tags yet.": "Sie haben noch keine Tags erstellt.",
+    "You have successfully subscribed to our newsletter!": "Sie haben sich erfolgreich für unseren Newsletter angemeldet!",
+    "You will receive an email every time a new article is published.": "Sie erhalten eine E-Mail, wenn ein neuer Artikel veröffentlicht wird.",
     "auth.failed": "Diese Anmeldeinformationen stimmen nicht mit unseren Aufzeichnungen überein.",
     "auth.password": "Das eingegebene Passwort ist falsch.",
     "auth.throttle": "Zu viele Anmeldeversuche. Bitte versuchen Sie es in :seconds Sekunden erneut.",
     "comment": "Kommentar",
     "comments": "Kommentare",
     "min read": "min. Lesezeit",
-    "of": "von"
+    "of": "von",
+    "You have unsubscribed from the newsletter": "Sie haben den Newsletter abbestellt",
+    "Dear": "Sehr geehrte/r",
+    "You have successfully unsubscribed from our newsletter. If you did not request this, please contact us.": "Sie haben sich erfolgreich von unserem Newsletter abgemeldet. Wenn Sie dies nicht veranlasst haben, kontaktieren Sie uns bitte.",
+    "Thank you for your time.": "Vielen Dank für Ihre Zeit.",
+    "Newsletter Confirmation Mail": "Bestätigung des Newsletter-Abonnements",
+    "Newsletter Confirmed": "Newsletter-Abonnement bestätigt",
+    "A new article has been published: \" :title\"": "Ein neuer Artikel wurde veröffentlicht: \" :title\"",
+    "A new article has been published on the blog!": "Ein neuer Artikel wurde im Blog veröffentlicht!"
 }
