--- a/lang/en.json
+++ b/lang/en.json
@@ -26,6 +26,7 @@
     "Clean code, testing strategies, and development workflows": "Clean code, testing strategies, and development workflows",
     "Comment text": "Comment text",
     "Comments": "Comments",
+    "Confirm subscription": "Confirm subscription",
     "Contact Me": "Contact Me",
     "Content": "Content",
     "Continuous Integration & Deployment": "Continuous Integration & Deployment",
@@ -49,6 +50,8 @@
     "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "If you did not subscribe, you can ignore this email.": "If you did not subscribe, you can ignore this email.",
+    "If you want to unsubscribe, you can do so by clicking the link below:": "If you want to unsubscribe, you can do so by clicking the link below:",
     "Javascript (React, Vue)": "Javascript (React, Vue)",
     "Language": "Language",
     "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony tips, patterns, and architectural insights",
@@ -108,6 +111,10 @@
     "Technical Skills": "Technical Skills",
     "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions",
     "Testing (PHPUnit, Pest)": "Testing (PHPUnit, Pest)",
+    "Thank you for subscribing to the newsletter!": "Thank you for subscribing to the newsletter!",
+    "The email field is required": "The email field is required",
+    "The email is already subscribed": "The email is already subscribed",
+    "The email must be a valid email address": "The email must be a valid email address",
     "This action cannot be undone. This will permanently delete this category.": "This action cannot be undone. This will permanently delete this category.",
     "This action cannot be undone. This will permanently delete this post.": "This action cannot be undone. This will permanently delete this post.",
     "This action cannot be undone. This will permanently delete this tag.": "This action cannot be undone. This will permanently delete this tag.",
@@ -115,10 +122,14 @@
     "Title": "Title",
     "Title A-Z": "Title A-Z",
     "Title Z-A": "Title Z-A",
+    "To confirm your subscription, click the link below:": "To confirm your subscription, click the link below:",
     "Translation Key": "Translation Key",
+    "Unsubscribe": "Unsubscribe",
     "View all": "View all",
     "Write your comment here...": "Write your comment here...",
     "You have not created any tags yet.": "You have not created any tags yet.",
+    "You have successfully subscribed to our newsletter!": "You have successfully subscribed to our newsletter!",
+    "You will receive an email every time a new article is published.": "You will receive an email every time a new article is published.",
     "auth.failed": "auth.failed",
     "auth.password": "auth.password",
     "auth.throttle": "auth.throttle",
