--- a/lang/pl.json
+++ b/lang/pl.json
@@ -26,6 +26,7 @@
     "Clean code, testing strategies, and development workflows": "Czysty kod, strategie testowania i przepływy pracy",
     "Comment text": "Treść komentarza",
     "Comments": "Komentarze",
+    "Confirm subscription": "Potwierdź subskrypcję",
     "Contact Me": "Skontaktuj się ze mną",
     "Content": "Treść",
     "Continuous Integration & Deployment": "",
@@ -49,6 +50,8 @@
     "I respect your privacy. Unsubscribe at any time": "Szanuję Twoją prywatność. Możesz zrezygnować w każdej chwili",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "Jestem pasjonującym programistą PHP z 3-letnim doświadczeniem w frameworkach Laravel i Symfony. Specjalizuję się w budowaniu niezawodnych aplikacji internetowych i implementacji praktyk DevOps. Mam również bogate doświadczenie w nowoczesnym programowaniu JavaScript, pracując z React i Vue.js do tworzenia responsywnych i interaktywnych interfejsów użytkownika.",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "If you did not subscribe, you can ignore this email.": "Jeśli nie subskrybowałeś, możesz zignorować ten email.",
+    "If you want to unsubscribe, you can do so by clicking the link below:": "Jeśli chcesz zrezygnować z subskrypcji, kliknij w poniższy link:",
     "Javascript (React, Vue)": "",
     "Language": "Język",
     "Laravel & Symfony tips, patterns, and architectural insights": "Porady dotyczące Laravel i Symfony, wzorce i spostrzeżenia architektoniczne",
@@ -88,7 +91,7 @@
     "Read more about": "Czytaj więcej o",
     "Read the Blog": "Czytaj bloga",
     "Redis": "Redis",
-    "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Rozwój i utrzymanie aplikacji webowych w Laravel i React. Implementacja praktyk DevOps, w tym konteneryzacji Docker, pipeline'ów CI/CD i testów automatycznych. Podejmowanie decyzji technicznych i mentoring młodszych programistów. Optymalizacja wydajności aplikacji i zapewnianie jakości kodu poprzez code review i najlepsze praktyki.",
+    "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Rozwój i utrzymanie aplikacji webowych w Laravel i React. Implementacja praktyk DevOps, w tym konteneryzacji Docker, pipeline'ów CI\/CD i testów automatycznych. Podejmowanie decyzji technicznych i mentoring młodszych programistów. Optymalizacja wydajności aplikacji i zapewnianie jakości kodu poprzez code review i najlepsze praktyki.",
     "Save Category": "Zapisz kategorię",
     "Save Post": "Zapisz post",
     "Save Tag": "Zapisz tag",
@@ -108,6 +111,10 @@
     "Technical Skills": "Umiejętności techniczne",
     "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Techniczne spostrzeżenia, najlepsze praktyki i dogłębne analizy Laravel, Symfony i nowoczesnych rozwiązań DevOps",
     "Testing (PHPUnit, Pest)": "Testowanie (PHPUnit, Pest)",
+    "Thank you for subscribing to the newsletter!": "Dziękujemy za subskrypcję newslettera!",
+    "The email field is required": "Pole email jest wymagane",
+    "The email is already subscribed": "Ten email jest już zasubskrybowany",
+    "The email must be a valid email address": "Email musi być prawidłowym adresem email",
     "This action cannot be undone. This will permanently delete this category.": "Tej akcji nie można cofnąć. To trwale usunie tę kategorię.",
     "This action cannot be undone. This will permanently delete this post.": "Tej akcji nie można cofnąć. To trwale usunie ten post.",
     "This action cannot be undone. This will permanently delete this tag.": "Tej akcji nie można cofnąć. To trwale usunie ten tag.",
@@ -115,15 +122,27 @@
     "Title": "Tytuł",
     "Title A-Z": "Tytuł A-Z",
     "Title Z-A": "Tytuł Z-A",
+    "To confirm your subscription, click the link below:": "Aby potwierdzić subskrypcję, kliknij w poniższy link:",
     "Translation Key": "Klucz tłumaczenia",
+    "Unsubscribe": "Zrezygnuj z subskrypcji",
     "View all": "Pokaż wszystkie",
     "Write your comment here...": "Napisz swój komentarz tutaj...",
     "You have not created any tags yet.": "Nie utworzyłeś jeszcze żadnych tagów.",
+    "You have successfully subscribed to our newsletter!": "Pomyślnie zasubskrybowałeś nasz newsletter!",
+    "You will receive an email every time a new article is published.": "Będziesz otrzymywać email za każdym razem, gdy zostanie opublikowany nowy artykuł.",
     "auth.failed": "Błędne dane logowania.",
     "auth.password": "Podane hasło jest nieprawidłowe.",
     "auth.throttle": "Za dużo prób logowania. Spróbuj ponownie za :seconds sekund.",
     "comment": "komentarz",
     "comments": "Komentarze",
     "min read": "min. czytania",
-    "of": "z"
+    "of": "z",
+    "You have unsubscribed from the newsletter": "Zrezygnowałeś z newslettera",
+    "Dear": "Drogi",
+    "You have successfully unsubscribed from our newsletter. If you did not request this, please contact us.": "Pomyślnie zrezygnowałeś z naszego newslettera. Jeśli to nie Ty, skontaktuj się z nami.",
+    "Thank you for your time.": "Dziękujemy za Twój czas.",
+    "Newsletter Confirmation Mail": "Potwierdzenie subskrypcji newslettera",
+    "Newsletter Confirmed": "Subskrypcja newslettera potwierdzona",
+    "A new article has been published: \" :title\"": "Opublikowano nowy artykuł: \" :title\"",
+    "A new article has been published on the blog!": "Na blogu pojawił się nowy artykuł!"
 }
